[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "CPU runtime for CubeCL"
edition.workspace = true
keywords = ["simd", "cranelift"]
license.workspace = true
name = "cubecl-cranelift"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-cuda"
version.workspace = true

[features]
default = [
  "cubecl-runtime/default",
  "cubecl-common/default",
  "cubecl-core/default",
]
std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.5.0" }
cubecl-core = { path = "../cubecl-core", version = "0.5.0" }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.5.0", default-features = false, features = [
  "channel-mutex",
] }

bytemuck = { workspace = true }
cranelift = { version = "0.117.1" }
cranelift-codegen = { version = "0.117.1" }
cranelift-object = { version = "0.117.1" }
cranelift-jit = { version = "0.117.1" }
cranelift-module = { version = "0.117.1" }
# may not need target-lexicon directly
cranelift-native = "0.117.1"
target-lexicon = "0.13.1"


derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.5.0", features = [
  "export_tests",
] }
cubecl-linalg = { path = "../cubecl-linalg", version = "0.5.0", features = [
  "export_tests",
] }
pretty_assertions = { workspace = true }
