[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "CUDA runtime for CubeCL"
edition.workspace = true
keywords = ["gpu", "cuda"]
license.workspace = true
name = "cubecl-cuda"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-cuda"
version.workspace = true

[features]
default = [
    "std",
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
]
ptx-wmma = []
std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]

attention_tests_all = [
    "attention_tests_f16",
    "attention_tests_f32",
    "attention_tests_unit",
    "attention_tests_blackbox_accelerated",
]
attention_tests_f16 = ["cubecl-attention/attention_tests_f16"]
attention_tests_f32 = ["cubecl-attention/attention_tests_f32"]
attention_tests_unit = ["cubecl-attention/attention_tests_unit"]
attention_tests_blackbox_accelerated = [
    "cubecl-attention/attention_tests_blackbox_accelerated",
]

conv_tests = ["cubecl-convolution/conv_tests"]
matmul_tests_all = [
    "matmul_tests_unit",
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_tma",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_strided",
    "matmul_tests_tilewise",
    "matmul_tests_hybrid",
    "matmul_tests_barrier",
    "matmul_tests_specialized",
    "matmul_tests_f16",
    "matmul_tests_f32",
    "matmul_tests_layouts",
    "matmul_tests_alt_shapes",
    "matmul_tests_partition_buffering",
    "matmul_tests_hypercube",
    "matmul_tests_mma",
    "matmul_tests_swizzle",
]
matmul_tests_alt_shapes = ["cubecl-matmul/matmul_tests_alt_shapes"]
matmul_tests_barrier = ["cubecl-matmul/matmul_tests_barrier"]
matmul_tests_base = [
    "matmul_tests_plane",
    "matmul_tests_vecmat",
    "matmul_tests_double",
    "matmul_tests_simple",
    "matmul_tests_ordered",
    "matmul_tests_cyclic",
    "matmul_tests_f16",
]
matmul_tests_cyclic = ["cubecl-matmul/matmul_tests_cyclic"]
matmul_tests_double = ["cubecl-matmul/matmul_tests_double"]
matmul_tests_f16 = ["cubecl-matmul/matmul_tests_f16"]
matmul_tests_f32 = ["cubecl-matmul/matmul_tests_f32"]
matmul_tests_hybrid = ["cubecl-matmul/matmul_tests_hybrid"]
matmul_tests_hypercube = ["cubecl-matmul/matmul_tests_hypercube"]
matmul_tests_layouts = ["cubecl-matmul/matmul_tests_layouts"]
matmul_tests_mma = ["cubecl-matmul/matmul_tests_mma"]
matmul_tests_ordered = ["cubecl-matmul/matmul_tests_ordered"]
matmul_tests_partition_buffering = [
    "cubecl-matmul/matmul_tests_partition_buffering",
]
matmul_tests_plane = ["cubecl-matmul/matmul_tests_plane"]
matmul_tests_simple = ["cubecl-matmul/matmul_tests_simple"]
matmul_tests_specialized = ["cubecl-matmul/matmul_tests_specialized"]
matmul_tests_strided = ["cubecl-matmul/matmul_tests_strided"]
matmul_tests_swizzle = ["cubecl-matmul/matmul_tests_swizzle"]
matmul_tests_tilewise = ["cubecl-matmul/matmul_tests_tilewise"]
matmul_tests_tma = ["cubecl-matmul/matmul_tests_tma"]
matmul_tests_unit = ["cubecl-matmul/matmul_tests_unit"]
matmul_tests_vecmat = ["cubecl-matmul/matmul_tests_vecmat"]

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.4", default-features = false, features = [
    "cache",
] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.4", default-features = false }
cubecl-cpp = { path = "../cubecl-cpp", version = "=0.9.0-pre.4", default-features = false, features = [
    "cuda",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.4", default-features = false, features = [
    "channel-mutex",
] }

bytemuck = { workspace = true }
cudarc = { workspace = true }

derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
cubecl-attention = { path = "../cubecl-attention", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-convolution = { path = "../cubecl-convolution", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-matmul = { path = "../cubecl-matmul", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-quant = { path = "../cubecl-quant", version = "=0.9.0-pre.4", features = [
    "export_tests",
    "kernels",
] }
cubecl-random = { path = "../cubecl-random", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-reduce = { path = "../cubecl-reduce", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.4", features = [
    "export_tests",
] }
paste = { workspace = true }
pretty_assertions = { workspace = true }

[build-dependencies]
cudarc = { workspace = true }
