[package]
name = "cubecl-farm"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.6.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.6.0", default-features = false }
cubecl-cpp = { path = "../cubecl-cpp", version = "0.6.0", default-features = false, features = [
  "cuda",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.6.0", default-features = false, features = [
  "channel-mutex",
] }
cubecl-cuda = { path = "../cubecl-cuda", version = "0.6.0" }
bytemuck = { workspace = true }
cudarc = { version = "0.16.4", features = [
  "driver",
  "nccl",
], default-features = false }
crossbeam-channel = "0.5.15"
thiserror = "2.0.12"
