[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "AMD ROCm HIP runtime for CubeCL"
edition.workspace = true
keywords = ["gpu", "amd", "rocm", "hip"]
license.workspace = true
name = "cubecl-hip"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-hip"
version.workspace = true

[features]
default = [
    "std",
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
]

std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]

rocwmma = []

tracing = [
    "dep:tracing",
    "cubecl-runtime/tracing",
    "cubecl-common/tracing",
    "cubecl-core/tracing",
]


[dependencies]
# Runtime Deps
log = { workspace = true }
tracing = { workspace = true, features = ["attributes"], optional = true }

cubecl-zspace = { path = "../cubecl-zspace", version = "=0.9.0-pre.6" }
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.6", features = [
    "cache",
] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.6", default-features = false }
cubecl-cpp = { path = "../cubecl-cpp", version = "=0.9.0-pre.6", default-features = false, features = [
    "hip",
] }
cubecl-hip-sys = { version = "7.0.5183101" }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.6", default-features = false, features = [
    "channel-mutex",
] }

bytemuck = { workspace = true }

derive-new = { workspace = true }
half = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.6", features = [
    "export_tests",
] }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.6", features = [
    "export_tests",
] }
pretty_assertions = { workspace = true }
