[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Linear Algebra Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-linalg"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/cubecl-linalg"
version.workspace = true

[features]
default = []
export_tests = ["pretty_assertions"]
std = []

[dependencies]
bytemuck = { workspace = true }
cubecl-core = { path = "../cubecl-core", version = "0.2.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.2.0", default-features = false }
env_logger = { version = "0.11", optional = true }
half = { workspace = true, features = ["bytemuck"] }
pretty_assertions = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1"
