[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Linear Algebra Library."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-linalg"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-linalg"
version.workspace = true

[features]
default = ["std", "cubecl-runtime/default", "cubecl-core/default"]
export_tests = ["pretty_assertions"]
std = ["cubecl-runtime/std", "cubecl-core/std"]

unit_matmul_tests = []
accelerated_matmul_tests = []
matmul_tests = ["unit_matmul_tests", "accelerated_matmul_tests"]

[dependencies]
bytemuck = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "0.6.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.6.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.6.0", default-features = false }
cubecl-std = { path = "../cubecl-std", version = "0.6.0", default-features = false }
cubecl-reduce = { path = "../cubecl-reduce", version = "0.6.0", default-features = false }
cubecl-random = { path = "../cubecl-random", version = "0.6.0", default-features = false }
half = { workspace = true, features = ["bytemuck"] }
pretty_assertions = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
