[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com",
]
categories = ["science"]
description = "Procedural macros for CubeCL"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-macros-2"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/cubecl-macros"
version.workspace = true

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
darling = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

cubecl-common = { path = "../cubecl-common", version = "0.1.1", default-features = false }

[dev-dependencies]
compiletest_rs = { version = "0.11", features = ["tmp"] }
cubecl-core = { path = "../cubecl-core", version = "0.1.1", default-features = false }
pretty_assertions = "1.4"
